# pylasu

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  Requirements.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
docs/: .gitignore  conf.py  index.rst  modules.rst  pylasu.StrumentaLanguageSupport.rst  pylasu.emf.rst  pylasu.mapping.rst  pylasu.model.rst  pylasu.parsing.rst  pylasu.playground.rst  pylasu.reflection.rst  pylasu.rst  pylasu.testing.rst  pylasu.transformation.rst  pylasu.validation.rst
polyparser-rt/: astruntime.py  kolasuast.py
polyparserrt/: astruntime.py
pylasu/: astruntime.py  kolasuast.py  support.py
pylasu/StrumentaLanguageSupport/: StrumentaLanguageSupport.py  __init__.py
pylasu/codebase/: __init__.py  codebase_file.py  lionweb.py  lwlanguage.py  serialization.py
pylasu/customserialization/: astruntime.py
pylasu/emf/: __init__.py  metamodel_builder.py  model.py
pylasu/lionweb/: ast_generation.py  deserializer_generation.py  generator.py  language_generation.py  starlasu.py  utils.py
pylasu/lwmodel/: __init__.py  astnode.py
pylasu/lwtransformation/: generic_nodes.py  transformation.py
pylasu/mapping/: parse_tree_to_ast_transformer.py
pylasu/model/: __init__.py  errors.py  metamodel.py  model.py  naming.py  position.py  processing.py  reflection.py  traversing.py
pylasu/parsing/: __init__.py  antlr.py  parse_tree.py  results.py
pylasu/playground/: __init__.py  transpilation_trace.py  transpilation_trace_ecore.py
pylasu/reflection/: __init__.py  reflection.py  support.py
pylasu/testing/: testing.py
pylasu/transformation/: generic_nodes.py  printing.py  transformation.py
pylasu/validation/: __init__.py  validation.py
tests/: .flake8  .gitignore  fixtures.py  generate-test-parsers.sh  test_metamodel_builder.py  test_model.py  test_parse_tree.py  test_processing.py  test_transpilation_trace.py  test_traversing.py
(+7 files in other folders)
