[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylasu"
dynamic = ["version", "optional-dependencies"]
authors = [
    { name="Lorenzo Addazi", email="lorenzo.addazi@strumenta.com" },
    { name="Alessio Stalla", email="alessio.stalla@strumenta.com" },
    { name="Federico Tomassetti", email="federico@strumenta.com" },
]
description = "Pylasu is an AST Library in the StarLasu family, targeting the Python language."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"

[project.urls]
"Homepage" = "https://github.com/strumenta/pylasu"
"Bug Tracker" = "https://github.com/strumenta/pylasu/issues"

[tool.setuptools.dynamic]
version = {attr = "pylasu.VERSION"}

[tool.setuptools.packages.find]
include = ["pylasu*"]

[tool.coverage.run]
branch = true
omit = ["docs/*", "tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
